--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "numeral": "^2.0.6",
+    "vue": "^2.6.11",
+    "vue-filter-number-format": "^3.0.1",
+    "vue-slider-component": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
